# image-analyser-fastapi-python-restfulapi

./: Dockerfile  README-NEW-FEATURES.md  README-OWNNOTE.md  README.md  docker-compose.yaml  pyproject-additions.txt  pyproject.toml
config/: rules.yaml
src/image_analyser_backend/: __init__.py  app.py
src/image_analyser_backend/core/: config_injections.py  lifespan.py  settings.py
src/image_analyser_backend/daos/: user_dao.py
src/image_analyser_backend/models/: users.py
src/image_analyser_backend/request_schemas/: config_request.py
src/image_analyser_backend/response_handlers/: json_error_handler.py  json_response_handler.py
src/image_analyser_backend/routers/: analyse_routes.py  config_routes.py  index_routes.py
src/image_analyser_backend/schemas/: __init__.py  analysis_result.py
src/image_analyser_backend/services/: analyse_service.py  config_service.py  detector.py  onnx_detector.py  rule_engine.py
src/image_analyser_backend/utils/: image_util.py
tests/: conftest.py  test_analysis.py
